--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
             <h1 class="main-title">Amigo Secreto</h1>
             <img src="assets/amigo-secreto.png" alt="Imagen representativa de amigo secreto">
         </header>
-        
-        <section class="input-section">
-            <h2 class="section-title">Digite el nombre de sus amigos</h2>
+        <section>
+            <h2 id="tituloLista"class="section-title">Digite el nombre de sus amigos</h2>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
                 <button class="button-add" onclick="agregarAmigo()">Añadir</button>
             </div>
-           
-            <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
+            <div id="errorMensaje" style="color: red; display: none;"></div>
+            <ul id="listaAmigos" class="name-list" aria-labelledby="tituloLista" role="list"></ul>
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
-
             <div class="button-container">
                 <button class="button-draw" onclick="sortearUnAmigo()" aria-label="Sortear un amigo secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
